Mon Jan 23 16:44:16 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/compiler/Event_Traits.cpp:
        * cuts/iccm/compiler/Servant_File.cpp:
        * cuts/iccm/compiler/Servant_Impl.cpp:
        * cuts/iccm/compiler/Stub_File.cpp:
        * cuts/iccm/compiler/be_global.cpp:
        * cuts/iccm/servant/Context_T.h:
        * cuts/iccm/servant/Context_T.inl:
        * cuts/iccm/servant/Cookie.h:
        * cuts/iccm/servant/EventConsumer.h:
        * cuts/iccm/servant/Servant_T.h:
        * cuts/iccm/servant/Servant_T.inl:
        * cuts/iccm/servant/Servant_T.cpp:

          Fixed build errors related to the migration.

Mon Jan 23 04:17:10 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/deployment:
        * cuts/iccm/deployment/Component_Instance_Handler_T.h:
        * cuts/iccm/deployment/Component_Instance_Handler_T.inl:
        * cuts/iccm/deployment/Component_Instance_Handler_T.cpp:
        * cuts/iccm/deployment/Container_Strategy.h:
        * cuts/iccm/deployment/Container_Strategy.inl:
        * cuts/iccm/deployment/Container_Strategy.cpp:
        * cuts/iccm/deployment/Container_Strategy_T.h:
        * cuts/iccm/deployment/Container_Strategy_T.inl:
        * cuts/iccm/deployment/Container_Strategy_T.cpp:
        * cuts/iccm/deployment/Container_T.h:
        * cuts/iccm/deployment/Container_T.inl:
        * cuts/iccm/deployment/Container_T.cpp:
        * cuts/iccm/deployment/Deployment_Handlers.mpc:
        * cuts/iccm/deployment/Deployment_Handlers_export.h:

          First implementation of the DAnCE deployment handlers
          for iCCM.

        * cuts/iccm/servant:
        * cuts/iccm/servant/Context_T.h:
        * cuts/iccm/servant/Context_T.inl:
        * cuts/iccm/servant/Context_T.cpp:
        * cuts/iccm/servant/Cookie.h:
        * cuts/iccm/servant/Cookie.inl:
        * cuts/iccm/servant/Cookie.cpp:
        * cuts/iccm/servant/EventConsumer.h: