@@ -1,3 +1,15 @@
+Mon Jan 23 20:09:05 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * cuts/iccm/deployment/Component_Instance_Handler_T.h:
+        * cuts/iccm/deployment/Component_Instance_Handler_T.cpp:
+        * cuts/iccm/deployment/Container_Strategy_T.h:
+        * cuts/iccm/deployment/Container_T.h:
+        * cuts/iccm/deployment/Container_T.inl:
+        * cuts/iccm/deployment/Container_T.cpp:
+        * cuts/iccm/servant/Context_T.inl:
+
+          Fixed build errors related to the migration.
+
 Mon Jan 23 16:44:16 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * cuts/iccm/compiler/Event_Traits.cpp:
